--- a/css/about.css
+++ b/css/about.css
@@ -68,11 +68,11 @@ li.nav-item.fs-2.active a {
     color: #fff;
 }
 
-.nav-item:hover {
+.navbar-nav .nav-item:hover {
     background-color: #fff;
 }
 
-.nav-item:hover a {
+.navbar-nav .nav-item:hover a {
     color: #2978b5;
     font-weight: 500;
 }
@@ -82,10 +82,10 @@ li.nav-item.fs-2.active a {
     height: 0 auto;
     padding: 120px 0;
     text-align: center;
-    background-color: rgb(86 94 124);
+    /*background-color: rgb(86 94 124);*/
     background-size: cover;
     background-repeat: no-repeat;
-    color: #fff;
+    /*color: #fff;*/
 }
 
 .main-title {
@@ -163,7 +163,14 @@ a.items.active {
     background-color: #e9e9e9;
 }
 
-.origin-section h1 {
+.mission-section {
+    width: 100%;
+    padding: 80px 0;
+    background-color: #fff;
+}
+
+.origin-section h1,
+.mission-section h1 {
     font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
         "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     font-weight: 300;
@@ -172,13 +179,16 @@ a.items.active {
     margin-bottom: 20px;
 }
 
-.origin-section h3 {
+.origin-section h3,
+.mission-section h3 {
     font-family: "Times New Roman", Times, serif;
     font-size: 30px;
     margin-bottom: 20px;
 }
 
-.origin-section p {
+.origin-section p,
+.mission-section p {
     text-align: justify;
     margin-bottom: 30px;
 }
+
