--- a/css/main.css
+++ b/css/main.css
@@ -59,10 +59,11 @@ li.nav-item.fs-2.active {
 li.nav-item.fs-2.active a {
   color: #fff;
 }
-.nav-item:hover {
+.navbar-nav .nav-item:hover {
   background-color: #fff;
 }
-.nav-item:hover a {
+
+.navbar-nav .nav-item:hover a {
   color: #2978b5;
   font-weight: 500;
 }
